More bug fixes on GAMA-15
#3

--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -757,8 +757,8 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
-    "    #1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
-    "    #1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
     "    #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "    #1 * ~np.isnan(master_catalogue['f_decam_y']) +\n",
