Fixing DES and adding low memory merge on SGP
Adding DES to SGP took it over the limit into memory issues #17

--- a/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -108,20 +110,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "venn3(\n",
+    "venn2(\n",
     "    [\n",
-    "        np.sum(flag_obs == 4),\n",
-    "        np.sum(flag_obs == 2),\n",
-    "        np.sum(flag_obs == 6),\n",
     "        np.sum(flag_obs == 1),\n",
-    "        np.sum(flag_obs == 5),\n",
-    "        np.sum(flag_obs == 3),\n",
-    "        np.sum(flag_obs == 7)\n",
+    "        np.sum(flag_obs == 2),\n",
+    "        np.sum(flag_obs == 3)\n",
     "    ],\n",
-    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    set_labels=('Optical', 'near-IR'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/len(flag_obs)))\n",
     ")\n",
     "plt.title(\"Wavelength domain observations\");"
@@ -130,20 +130,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "venn3(\n",
+    "venn2(\n",
     "    [\n",
-    "        np.sum(flag_det[flag_obs == 7] == 4),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 2),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 6),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 1),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 5),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 3),\n",
-    "        np.sum(flag_det[flag_obs == 7] == 7)\n",
+    "        np.sum(flag_det[flag_obs == 3] == 1),\n",
+    "        np.sum(flag_det[flag_obs == 3] == 2),\n",
+    "        np.sum(flag_det[flag_obs == 3] == 3)\n",
     "    ],\n",
-    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    set_labels=('near-IR', 'Optical'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
     ")\n",
     "plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
@@ -190,6 +188,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -212,6 +211,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -305,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_vista_j'][ml_twomass_idx],\n",
@@ -315,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vista_ks_like = master_catalogue['m_vista_k'] + 0.003 + 0.004 * (\n",
@@ -336,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -351,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -376,6 +384,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -391,7 +400,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -405,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -419,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -433,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
