--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
@@ -107,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bands = [\"g\", \"r\", \"i\", \"z\", \"y\"]\n",
@@ -495,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -617,11 +621,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] = catalogue[RA_COL] + delta_ra.to(u.deg)\n",
     "catalogue[DEC_COL] = catalogue[DEC_COL] + delta_dec.to(u.deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalogue[RA_COL].unit = u.deg\n",
+    "catalogue[DEC_COL].unit = u.deg"
    ]
   },
   {
@@ -657,7 +673,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GAIA_FLAG_NAME = \"des_flag_gaia\"\n",
