--- a/dmu1/dmu1_ml_ELAIS-S1/1.6_DES.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/1.6_DES.ipynb
@@ -680,6 +680,18 @@
    },
    "outputs": [],
    "source": [
+    "catalogue[RA_COL].unit = u.deg\n",
+    "catalogue[DEC_COL].unit = u.deg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
     "                    gaia_coords.ra, gaia_coords.dec)"
    ]
