Star hole code run on ELAIS-S1

--- a/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -80,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quick_checks(master_catalogue).show_in_notebook()"
@@ -108,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "venn3(\n",
@@ -130,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "venn3(\n",
@@ -193,6 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -309,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_vista_j'][ml_twomass_idx],\n",
@@ -354,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
@@ -379,6 +392,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -394,11 +408,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_voice_r'] - master_catalogue['m_irac1'],\n",
+    "    master_catalogue['m_voice_r'] - master_catalogue['m_irac_i1'],\n",
     "    master_catalogue['m_voice_b99'] - master_catalogue['m_voice_v'],\n",
     "    \"VOICE r - IRAC1\", \"b99 - v (VOICE)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
@@ -408,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
